🐕‍🦺 Revert and add custom directory for each service